--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@phosphor-icons/vue": "^2.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vueuse/core": "^13.6.0",
+    "cytoscape": "^3.33.0",
     "nanoid": "^5.1.5",
     "vite": "^7.0.6",
-    "vue": "^3.5.18"
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.0",
