--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["esnext", "DOM"],
+    "lib": ["ESNext", "DOM", "ScriptHost", "WebWorker"],
     "useDefineForClassFields": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "paths": { "@/*": ["./src/*"] },
     "resolveJsonModule": true,
-    "types": ["vite/client"],
+    "types": ["vite/client", "vite-plugin-pwa/client"],
     "strict": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
