--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,5 +47,14 @@
     "scss",
     "pcss",
     "postcss"
+  ],
+  "i18n-ally.parsers.typescript.compilerOptions": { "moduleResolution": "node" },
+  "i18n-ally.localesPaths": ["src/constants/locales"],
+  "i18n-ally.enabledParsers": ["ts"],
+  "i18n-ally.theme.annotation": "#e6db74",
+  "i18n-ally.theme.annotationBorder": "transparent",
+  "i18n-ally.keysInUse": [
+    "compatibility.*",
+    "MBTI.*"
   ]
 }
